Changed web.js and index.html so that it works from a remote web server

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset='utf-8'> 
-        <title>My First Bitstarter</title>
+        <title>Mutable Learning</title>
         <!-- Added from the HW4 description -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Load remote stylesheets -->
@@ -109,12 +109,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Mutable Learning</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#collapseOne">About</a></li>
+              <li><a href="#collapseFour">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -130,19 +130,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Mutable Learning Assistant</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">We all learn in different ways at different rates, by using this learning assistant you will maximize your learning potential!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img src="Intro.png" alt="Introduction"/>
         </div>
 
         <!-- Define a new 'actions' div to contain statistics, order, and share buttons-->
@@ -159,13 +159,13 @@
               <div class="span4">
               <!-- There is no linediv-c class! -->
                 <div class="linediv-c">
-                    <h3>$6000</h3>
-                    <p>of $10,000</p>
+                    <h3>$2000</h3>
+                    <p>of $15,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                    <h3>10</h3>
+                    <h3>30</h3>
                     <p>days left</p>
                 </div>
               </div>
@@ -175,8 +175,8 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 30%;"></div>
+              <div class="bar bar-warning" style="width: 70%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
@@ -199,11 +199,11 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img src="Problem.png" alt="The problem">
         </div>
         <div class="span5 copy">
           <p>
-            Fill in with the marketing text
+            Studies have shown that we all learn in different ways, through concrete experiences, abstract conceptualization, some of us are visual learners, or auditory learners. Thus the question arises, <i><b> Why not transform and complement the traditional class materials with those learning elements that help us understand and master a particular topic? Why not seek help from our peers in a systematic way?</i></b>
           </p>
         </div>
       </div>
@@ -211,11 +211,13 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            More marketing copy text
+            The <i>Mutable Learning Assistant</i> will help you change the structure or to complement the traditional class materials with any media document that is publicly available. You can add your own notes, and even share this mutable document with your friends. If you so desire, your friends can change the document through collaborative learning.
+                <br>
+                You can even create a virtual library of these mutable documents, which you can access from your computer or mobile device any time you want.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img src="Solution.png" alt="The solution">
         </div>
       </div>
 
@@ -229,24 +231,50 @@
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+                    What is <i>Mutable Learning?</i>
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question.
+                    <i>Mutable Learning</i> is a cloud-based tool that allows you to complement your class materials with any <i>learning element</i> that helps you understand and master a particular topic.
+                        <br>
+                        Any media that you choose tho add to your class materials will then become a <i>virtual book</i> that you can access from your computer or mobile device.
                   </div>
                 </div>
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                    What's a Frequently Asked Question?
+                    How does the service work?
                   </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users.
+                    You create an account in our servers which will host <i>links</i> to materials that you want to add to your <i>virtual book</i>. You can also upload your own material. Please note that each account has X Gbytes of storage, if you require more please contact us for more information.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
+                    What about copyright?
+                  </a>
+                </div>
+                <div id="collapseThree" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    You are responsible for linking only to public domain media. If you upload any data into our servers it is assumed that you own the copyright for that material. We will never hold any claims of copyright to your data.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+                    How can you contact us?
+                  </a>
+                </div>
+                <div id="collapseFour" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    You can contact us at: email@ieureka.com.mx or visit our web site: <a href="http://ieureka.com.mx/innovo/system/">iEureka</a>
                   </div>
                 </div>
               </div>
