Added FAQ accordions

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries -->
                 <div class="linediv-l">
-                    <h3>1000</h3>
+                    <h3>2000</h3>
                     <p>backers</p>
                 </div>
               </div>
@@ -160,7 +160,7 @@
               <!-- There is no linediv-c class! -->
                 <div class="linediv-c">
                     <h3>$2000</h3>
-                    <p>of $15,000</p>
+                    <p>of $20,000</p>
                 </div>
               </div>
               <div class="span4">
@@ -213,7 +213,7 @@
           <p>
             The <i>Mutable Learning Assistant</i> will help you change the structure or to complement the traditional class materials with any media document that is publicly available. You can add your own notes, and even share this mutable document with your friends. If you so desire, your friends can change the document through collaborative learning.
                 <br>
-                You can even create a virtual library of these mutable documents, which you can access from your computer or mobile device any time you want.
+            You can even create a virtual library of these mutable documents, which you can access from your computer or mobile device any time you want.
           </p>
         </div>
         <div class="span5 asset">
@@ -238,7 +238,9 @@
                   <div class="accordion-inner">
                     <i>Mutable Learning</i> is a cloud-based tool that allows you to complement your class materials with any <i>learning element</i> that helps you understand and master a particular topic.
                         <br>
-                        Any media that you choose tho add to your class materials will then become a <i>virtual book</i> that you can access from your computer or mobile device.
+                    Any media that you choose tho add to your class materials will then become a <i>virtual book</i> that you can access from your computer or mobile device.
+                        <br>
+                    We plan to let you <i>manipulate</i> the presentation of your <i>virtual books</i> so you can rearrange and resize each learning element to suit your needs. We will provide some guidelines/templates to facilitate viewing your <i>virtual books</i> on mobiler devices.
                   </div>
                 </div>
               </div>
@@ -250,7 +252,12 @@
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    You create an account in our servers which will host <i>links</i> to materials that you want to add to your <i>virtual book</i>. You can also upload your own material. Please note that each account has X Gbytes of storage, if you require more please contact us for more information.
+                    You create an account in our servers which will host <i>links</i> to materials that you want to add to your <i>virtual book</i>. You can also upload your own material.
+                        <br>
+                    The service has a flat fee of $10/year which covers the costs of processing and storage of your <i>virtual documents</i>. You can store as many <i>virtual documents</i> as you like but please note that each account has up to 5 Gbytes of storage.
+                        <br>
+                    We expect to increase the amount of storage in the future, at no cost to you, but in the mean time if you require more storage please contact us for pricing information.
+                        <br>
                   </div>
                 </div>
               </div>
@@ -274,7 +281,7 @@
                 </div>
                 <div id="collapseFour" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    You can contact us at: email@ieureka.com.mx or visit our web site: <a href="http://ieureka.com.mx/innovo/system/">iEureka</a>
+                    Please visit our web site: <a href="http://ieureka.com.mx/innovo/system/">iEureka</a> for our contact information.
                   </div>
                 </div>
               </div>
