Added list elements in the FAQ

--- a/index.html
+++ b/index.html
@@ -236,11 +236,14 @@
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    <i>Mutable Learning</i> is a cloud-based tool that allows you to complement your class materials with any <i>learning element</i> that helps you understand and master a particular topic.
-                        <br>
-                    Any media that you choose tho add to your class materials will then become a <i>virtual book</i> that you can access from your computer or mobile device.
-                        <br>
-                    We plan to let you <i>manipulate</i> the presentation of your <i>virtual books</i> so you can rearrange and resize each learning element to suit your needs. We will provide some guidelines/templates to facilitate viewing your <i>virtual books</i> on mobiler devices.
+                    <ul>
+                        <li><i>Mutable Learning</i> is a cloud-based tool that allows you to complement your class materials with any <i>learning element</i> that helps you understand and master a particular topic.
+                        </li>
+                        <li>Any media that you choose tho add to your class materials will then become a <i>virtual book</i> that you can access from your computer or mobile device.
+                        </li>
+                        <li>We plan to let you <i>manipulate</i> the presentation of your <i>virtual books</i> so you can rearrange and resize each learning element to suit your needs. We will provide some guidelines/templates to facilitate viewing your <i>virtual books</i> on mobiler devices.
+                        </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -252,12 +255,14 @@
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    You create an account in our servers which will host <i>links</i> to materials that you want to add to your <i>virtual book</i>. You can also upload your own material.
-                        <br>
-                    The service has a flat fee of $10/year which covers the costs of processing and storage of your <i>virtual documents</i>. You can store as many <i>virtual documents</i> as you like but please note that each account has up to 5 Gbytes of storage.
-                        <br>
-                    We expect to increase the amount of storage in the future, at no cost to you, but in the mean time if you require more storage please contact us for pricing information.
-                        <br>
+                    <ul>
+                        <li>You create an account in our servers which will host <i>links</i> to materials that you want to add to your <i>virtual book</i>. You can also upload your own material.
+                        </li>
+                        <li>The service has a flat fee of $10/year which covers the costs of processing and storage of your <i>virtual documents</i>. You can store as many <i>virtual documents</i> as you like but please note that each account has up to 5 Gbytes of storage.
+                        </li>
+                        <li>We expect to increase the amount of storage in the future, at no cost to you, but in the mean time if you require more storage please contact us for pricing information.
+                        </li>
+                    </ul>
                   </div>
                 </div>
               </div>
