Fixed issue with http://validator.w3.org/

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="span5 copy">
           <p>
-            Studies have shown that we all learn in different ways, through concrete experiences, abstract conceptualization, some of us are visual learners, or auditory learners. Thus the question arises, <i><b> Why not transform and complement the traditional class materials with those learning elements that help us understand and master a particular topic? Why not seek help from our peers in a systematic way?</i></b>
+            Studies have shown that we all learn in different ways, either through <i>concrete experiences</i> or by <i>abstract conceptualization</i>. Some of us are <i>visual</i> learners and some are <i>auditory</i> learners. Thus the question arises, <i><b> Why not transform and complement the traditional class materials with those learning elements that help us understand and master a particular topic? Why not seek help from our peers in a systematic way?</b></i>
           </p>
         </div>
       </div>
