--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,19 @@
         <!-- Load jQuery and bootstrap -->
         <script src="/public/js/jquery-1.10.2.min.js"></script>
         <script src="/public/js/bootstrap.min.js"></script>
-        <!-- Define the style inside the same html file, will put this into another file later -->
+        <!-- Old Google Analytics code -->
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-42903345-1']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+                })();
+        </script>
+        <!-- End of old Google Analytics code -->
     </head>
     
     <body>
@@ -112,24 +124,23 @@
                 </div>
                 <div class="row-fluid">
                     <div class="span8 offset2 social">
-                    <!-- Social buttons are not included in default Bootstrap. -->
-                    <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-                        <button class="btn btn-twitter" onclick="javascript:location.href='https://twitter.com/mutablelearning'"><i class="icon-twitter"></i> | Twitter</button>
-                        <button class="btn btn-facebook" onclick="javascript:location.href='https://www.facebook.com/mutablelearning'"><i class="icon-facebook"></i> | Facebook</button>
+                    <!-- Note that the original social-buttons are removed -->
+                    <!-- AddThis Button BEGIN -->
+                        <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                            <a class="addthis_button_preferred_1"></a>
+                            <a class="addthis_button_preferred_2"></a>
+                            <a class="addthis_button_compact"></a>
+                            <a class="addthis_counter addthis_bubble_style"></a>
+                        </div>
+                        <script type="text/javascript">
+                             var addthis_config = {"data_track_addressbar":true};
+                        </script>
+                        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51facf9750a3ba10">
+                        </script>
+                    <!-- AddThis Button END -->
                     </div>
                 </div>
             </div>
-          </div>
-          <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div>
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter" onclick="javascript:location.href='https://twitter.com/mutablelearning'"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook" onclick="javascript:location.href='https://www.facebook.com/ieureka.innovo'"><i class="icon-facebook"></i> | Facebook</button>
           </div>
         </div>
       </div>
@@ -247,5 +258,16 @@
         </div>
       </div>
     </div>
+    <!-- Enable the new Google Analytics code -->
+    <script>
+ (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-42903345-1', 'mutablelearning.com');
+        ga('send', 'pageview');
+
+    </script>
+    <!-- End of Google Analytics code -->
     </body>
 </html>
