--- a/public/index.html
+++ b/public/index.html
@@ -116,10 +116,12 @@
                 </div>
           </div>
                 <div class="row-fluid">
-                    <div class="span6 offset3 order">
-                    <!-- Standard Bootstrap button -->
-                    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-                        <button class="btn btn-success btn-large">Preorder</button>
+                    <div class="span6 offset2 order">
+                    <!-- Add the bitcoin button -->
+                        <a class="coinbase-button" data-code="9b5e6e49cb7805aa499dc94ddd6063b1" data-button-style="custom_large"
+                            data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/9b5e6e49cb7805aa499dc94ddd6063b1">Preorder</a>
+                        <script src="https://coinbase.com/assets/button.js" type="text/javascript">
+                        </script>
                     </div>
                 </div>
                 <div class="row-fluid">
