--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset='utf-8'> 
         <title>Mutable Learning</title>
-        <!-- Added from the HW4 description -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Load the stylesheets -->
         <link rel="stylesheet" type="css/text" href="/public/css/bootstrap-combined.no-icons.min.css">
@@ -23,8 +22,11 @@
             _gaq.push(['_trackPageview']);
 
             (function() {
-                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var ga = document.createElement('script');
+                ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ?
+                     'https://ssl' : 'http://www') +
+                     '.google-analytics.com/ga.js';
                 var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
                 })();
         </script>
@@ -46,9 +48,9 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#collapseOne">About</a></li>
+              <li><a href="/public/about.html">About us</a></li>
               <li><a href="/orders">Orders</a></li>
-              <li><a href="#collapseFour">Contact</a></li>
+              <li><a href="/public/contact.html">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -153,27 +155,28 @@
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <img src="/public/img/Problem.png" alt="The problem">
-        </div>
-        <div class="span5 copy">
+        <div class="span5 offset1 copy">
           <p>
             Studies have shown that we all learn in different ways, either through <i>concrete experiences</i> or by <i>abstract conceptualization</i>. Some of us are <i>visual</i> learners and some are <i>auditory</i> learners. Thus the question arises, <i><b> Why not transform and complement the traditional class materials with those learning elements that help us understand and master a particular topic? Why not seek help from our peers in a systematic way?</b></i>
           </p>
         </div>
+        <div class="span5 asset">
+          <img src="/public/img/Problem.png" alt="The problem">
+        </div>
       </div>
 
       <div class="row-fluid section2">
-        <div class="span5 offset1 copy copy-right">
+        <div class="span5 offset1 asset">
+          <img src="/public/img/Solution.png" alt="The solution">
+        </div>
+        <div class="span5 copy copy-right">
           <p>
             The <i>Mutable Learning Assistant</i> will help you change the structure or to complement the traditional class materials with any media document that is publicly available. You can add your own notes, and even share this mutable document with your friends. If you so desire, your friends can change the document through collaborative learning.
-                <br>
+                <br><br>
             You can even create a virtual library of these mutable documents, which you can access from your computer or mobile device any time you want.
           </p>
         </div>
-        <div class="span5 asset">
-          <img src="/public/img/Solution.png" alt="The solution">
-        </div>
+
       </div>
 
       <!-- Introduce a little bit of JS for the FAQ, using the accordion effect -->
@@ -192,7 +195,7 @@
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
                     <ul>
-                        <li><i>Mutable Learning</i> is a cloud-based tool that allows you to complement your class materials with any <i>learning element</i> that helps you understand and master a particular topic.
+                        <li><i>Mutable Learning</i> is a set of cloud-based tools that allows you to complement your class materials with any <i>learning element</i> that helps you understand and master a particular topic.
                         </li>
                         <li>Any media that you choose tho add to your class materials will then become a <i>virtual book</i> that you can access from your computer or mobile device.
                         </li>
