Added demo page, fixed references to it on the other pages. The contact us page is merged into the about us page

--- a/public/demo.html
+++ b/public/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset='utf-8'> 
-        <title>About us</title>
+        <title>Contact information</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Load the stylesheets -->
         <link rel="stylesheet" type="css/text" href="/public/css/bootstrap-combined.no-icons.min.css">
@@ -31,9 +31,9 @@
             <ul class="nav">
               <li><a href="/public/index.html">Home</a>
               </li>
-              <li class="active"><a href="#">About us</a></li>
+              <li><a href="/public/about.html">About us</a></li>
               <li><a href="/orders">Orders</a></li>
-              <li><a href="/public/demo.html">Demo</a></li>
+              <li class="active"><a href="#">Demo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -41,17 +41,7 @@
     </div>
     <!-- Now add the content -->
     <div class="container">
-        <h1>About us</h1>
-        <br>
-        <p>The Mutable Learning set of tools are part of a larger effort to facilitate online and distance learning. Our company is called iEureka Soluciones en Innovación Educativa (iEureka for short) and was created by three university professors.<br><br>
-            iEureka started as a repository of freely available educational content that is created by professors throughout Latin America. However, we have seen an increased interest from non-spanish speaking countries and plan to create content for other languages, starting with English. The educational material is meant to be assembled into a single bundle, or learning unit, that can be used by other professors to help their students achieve a particular <i>learning outcome</i>. The learning units can be as simple as a word processing document, a PDF file, a spreadsheet, or as complex as a set of documents that describe a sequence of activities. We currently have over 100 learning units freely available, although most of them are meant for university and high-school students we have some K-12 materials as well.<br><br>
-            We are in the process of developing web-based applications that can facilitate the use of the learning units already on our site, and our first effort is the <i>Mutable Learning Assistant</i>.
-            </p>
-        <br>
-        <h1>Contact information</h1>
-        <br>
-        <p>Please visit our <a href="http://www.iEureka.com.mx">site</a>, in it you will find our most up to date contact information.
-        </p>
+        <h1>Demo</h1>
     </div>
     </body>
 </html>
