--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
               <li class="active"><a href="#">Home</a></li>
               <li><a href="/public/about.html">About us</a></li>
               <li><a href="/orders">Orders</a></li>
-              <li><a href="/public/contact.html">Contact</a></li>
+              <li><a href="/public/demo.html">Demo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
