Changes on the social buttons & the basic structure of the demo page

--- a/public/demo.html
+++ b/public/demo.html
@@ -5,7 +5,7 @@
         <title>Contact information</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Load the stylesheets -->
-        <link rel="stylesheet" type="css/text" href="/public/css/bootstrap-combined.no-icons.min.css">
+        <link rel="stylesheet" type="css/text" href="/public/css/bootstrap.min.css">
         <link rel="stylesheet" href="/public/css/BaseStyle.css">
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
         <!-- Load some fonts from google -->
@@ -40,8 +40,39 @@
       </div>
     </div>
     <!-- Now add the content -->
-    <div class="container">
-        <h1>Demo</h1>
-    </div>
-    </body>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span2">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Tools</li>
+              <li class="active"><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+            </ul>
+          </div><!--/.well -->
+        </div><!--/span-->
+        <div class="span5">
+          <div class="hero-unit">
+          </div>
+        </div><!--/span-->
+        <div class="span5">
+          <div class="hero-unit">
+          </div>
+        </div><!--/span-->
+      </div><!--/row-->
+      
+    </div><!--/.fluid-container-->
+    <!-- Put this under a CC By-SA 3.0 license. -->
+      <!-- http://creativecommons.org/licenses/ -->
+      <div class="row-fluid footer">
+        <div class="span12">
+          <p>This work is licensed under
+            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+              By-SA 3.0
+            </a></p>
+        </div>
+      </div>
+</body>
 </html>
