--- a/public/about.html
+++ b/public/about.html
@@ -18,6 +18,7 @@
             <script src="/public/js/bootstrap.min.js"></script>
     </head>
     <body>
+    <div class="wrapper">
     <!-- First add the mobile friendly navigation bar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -59,17 +60,18 @@
             <button class="btn btn-facebook" onclick="javascript:location.href='https://www.facebook.com/mutablelearning'"><i class="icon-facebook"></i> | Mutablelearning
             </button>
           </div>
-        <br><br><br>
+        <div class="push"></div>
     </div>
+    </div><!--/wrapper-->
     <!-- Put this under a CC By-SA 3.0 license. -->
     <!-- http://creativecommons.org/licenses/ -->
-      <div class="row-fluid footer">
+    <div class="row-fluid footer">
         <div class="span12">
           <p>This work is licensed under
             the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
               By-SA 3.0
             </a></p>
         </div>
-      </div>
+    </div>
     </body>
 </html>
