--- a/public/demo.html
+++ b/public/demo.html
@@ -16,33 +16,33 @@
             <script src="/public/js/bootstrap.min.js"></script>
     </head>
     <body>
-    <!-- First add the mobile friendly navigation bar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="/public/index.html">
-            Mutable Learning</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li><a href="/public/index.html">Home</a>
-              </li>
-              <li><a href="/public/about.html">About us</a></li>
-              <li><a href="/orders">Orders</a></li>
-              <li class="active"><a href="#">Demo</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+        <div class="wrapper">
+        <!-- First add the mobile friendly navigation bar -->
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="navbar-inner">
+                <div class="container">
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="brand" href="/public/index.html">
+                Mutable Learning</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li><a href="/public/index.html">Home</a></li>
+                        <li><a href="/public/about.html">About us</a></li>
+                        <li><a href="/orders">Orders</a></li>
+                        <li class="active"><a href="#">Demo</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+                </div> <!-- Container -->
+            </div>
         </div>
-      </div>
-    </div>
-    <!-- Now add the content -->
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span2">
+        <!-- Now add the content -->
+            <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span2">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Tools</li>
@@ -53,26 +53,39 @@
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span5">
-          <div class="hero-unit">
+                <div class="span10">
+                    <div class="row-fluid">
+                    <div class="span6">
+                        <div class="hero-unit">
+                        </div>
+                    </div><!--/span10-->
+                <div class="span6">
+                    <div class="hero-unit">
           </div>
-        </div><!--/span-->
-        <div class="span5">
-          <div class="hero-unit">
+                </div><!--/span6-->
+            </div>
+          <div class="row-fluid">
+            <div class="span6">
+              <div class="hero-unit">
+              </div>
+            </div><!--/span-->
+            <div class="span6">
+               <div class="hero-unit">
+               </div>
+            </div><!--/span-->
           </div>
-        </div><!--/span-->
-      </div><!--/row-->
-      
-    </div><!--/.fluid-container-->
+        </div> <!-- End of span10-->
+            </div><!--/row-->
+            <div class="push"></div>
+            </div><!--/.fluid-container-->
+        </div> <!-- wrapper -->
+    
     <!-- Put this under a CC By-SA 3.0 license. -->
-      <!-- http://creativecommons.org/licenses/ -->
-      <div class="row-fluid footer">
+    <div class="row-fluid footer">
         <div class="span12">
-          <p>This work is licensed under
-            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
-              By-SA 3.0
-            </a></p>
+            <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
+            </p>
         </div>
-      </div>
+    </div>
 </body>
 </html>
