--- a/public/demo.html
+++ b/public/demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset='utf-8'> 
-        <title>Contact information</title>
+        <title>Demo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Load the stylesheets -->
         <link rel="stylesheet" type="css/text" href="/public/css/bootstrap.min.css">
@@ -43,27 +43,25 @@
             <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span2">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Tools</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
+                    <div class="well sidebar-nav">
+                        <ul class="nav nav-list">
+                            <li class="nav-header">Tools</li>
+                            <li class="active"><a href="#">Link</a></li>
+                            <li><a href="#">Link</a></li>
+                            <li><a href="#">Link</a></li>
+                            <li><a href="#">Link</a></li>
+                        </ul>
+                    </div><!--/.well -->
+                </div><!--/span2-->
                 <div class="span10">
-                    <div class="row-fluid">
+                  <div class="row-fluid">
                     <div class="span6">
-                        <div class="hero-unit">
-                        </div>
-                    </div><!--/span10-->
-                <div class="span6">
-                    <div class="hero-unit">
-          </div>
-                </div><!--/span6-->
-            </div>
+                        <div class="hero-unit"></div>
+                    </div><!--/span6-->
+                    <div class="span6">
+                        <div class="hero-unit"></div>
+                    </div><!--/span6-->
+                </div><!--/span10-->
           <div class="row-fluid">
             <div class="span6">
               <div class="hero-unit">
@@ -75,7 +73,7 @@
             </div><!--/span-->
           </div>
         </div> <!-- End of span10-->
-            </div><!--/row-->
+            </div><!--/row-fluid-->
             <div class="push"></div>
             </div><!--/.fluid-container-->
         </div> <!-- wrapper -->
