--- a/public/demo_fluid.html
+++ b/public/demo_fluid.html
@@ -39,43 +39,134 @@
                 </div> <!-- Container -->
             </div>
         </div>
-        <!-- Now add the content -->
+            <!-- Now add the content -->
+            <!-- These are the media input fields -->
             <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span2">
-                    <div class="well sidebar-nav">
-                        <ul class="nav nav-list">
-                            <li class="nav-header">Tools</li>
-                            <li class="active"><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                        </ul>
-                    </div><!--/.well -->
-                </div><!--/span2-->
-                <div class="span10">
-                  <div class="row-fluid">
-                    <div class="span6">
-                        <div class="hero-unit"></div>
-                    </div><!--/span6-->
-                    <div class="span6">
-                        <div class="hero-unit"></div>
-                    </div><!--/span6-->
-                </div><!--/span10-->
-          <div class="row-fluid">
-            <div class="span6">
-              <div class="hero-unit">
-              </div>
-            </div><!--/span-->
-            <div class="span6">
-               <div class="hero-unit">
-               </div>
-            </div><!--/span-->
-          </div>
-        </div> <!-- End of span10-->
-            </div><!--/row-fluid-->
-            <div class="push"></div>
-            </div><!--/.fluid-container-->
+                <div class="span12">
+                    <div class="inputForm">
+                        <div class="input-prepend">
+                            <div class="btn-group">
+                                <button class="btn dropdown-toggle" data-toggle="dropdown"
+                                    id="mediaOne">
+                                    Type
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#">URL</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">file</a>
+                                    </li>
+                                </ul>
+                            </div><!-- Button -->
+                            <span class="add-on">http://</span>
+                            <input class="span2" id="prependedDropdownButton" type="text" placeholder="Media pane 1">
+                        </div><!--/Input pre-pend-->
+                        <div class="input-prepend">
+                            <div class="btn-group">
+                                <button class="btn dropdown-toggle" data-toggle="dropdown"
+                                    id="mediaTwo">
+                                    URL
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#">URL</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Video</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Pdf</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Audio</a>
+                                    </li>
+                                </ul>
+                            </div><!-- Button -->
+                            <input class="span2" id="prependedDropdownButton" type="text" placeholder="Media pane 2">
+                        </div><!--/Input pre-pend-->
+                        <div class="input-prepend">
+                            <div class="btn-group">
+                                <button class="btn dropdown-toggle" data-toggle="dropdown"
+                                    id="mediaThree">
+                                    URL
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#">URL</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Video</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Pdf</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Audio</a>
+                                    </li>
+                                </ul>
+                            </div><!-- Button -->
+                            <input class="span2" id="prependedDropdownButton" type="text">
+                        </div><!--/Input pre-pend-->
+                        <div class="input-prepend">
+                            <div class="btn-group">
+                                <button class="btn dropdown-toggle" data-toggle="dropdown"
+                                    id="mediaFour">
+                                    URL
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#">URL</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Video</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Pdf</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Audio</a>
+                                    </li>
+                                </ul>
+                            </div><!-- Button -->
+                            <input class="span2" id="prependedDropdownButton" type="text">
+                        </div><!--/Input pre-pend-->
+                    </div><!--/inputForm-->
+                </div><!--/span12 -->
+            </div><!--/container-fluid-->
+            
+            <!-- Now add the actual media panes -->
+            <div class="container-fluid">
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="row-fluid">
+                            <div class="span6">
+                                <div class="hero-unit"></div>
+                            </div><!--/span6-->
+                            <div class="span6">
+                                <div class="hero-unit"></div>
+                            </div><!--/span6-->
+                        </div><!--/row-fluid-->
+                    </div><!--/span12-->
+                </div><!--/row-fluid -->
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="row-fluid">
+                            <div class="span6">
+                                <div class="hero-unit"></div>
+                            </div><!--/span6-->
+                            <div class="span6">
+                                <div class="hero-unit"></div>
+                            </div><!--/span6-->
+                        </div><!--/row-fluid-->
+                    </div><!--/span12-->
+                </div><!--/row-fluid -->
+                <div class="push"></div>
+            </div><!--/.container-fluid -->
         </div> <!-- wrapper -->
     
     <!-- Put this under a CC By-SA 3.0 license. -->
