--- a/public/index.html
+++ b/public/index.html
@@ -76,13 +76,17 @@
           <p class="lead">We all learn in different ways at different rates, by using this learning assistant you will maximize your learning potential!</p>
         </div>
       </div>
-      <div class="row-fluid pitch">
-        <div class="span5 offset1 video">
-          <img src="/public/img/Intro.png" alt="Introduction"/>
+      <div class="row-fluid pitch"> 
+        <div class="span6 video"> 
+            <video src="/public/img/Intro.m4v" controls height="254" width="449" poster="/public/img/Intro.png">
+                Sorry, your browser doesn't support the video tag, 
+                but you can <a href="/public/img/Intro.m4v">download it</a>
+                and watch it with your favorite video player!
+            </video>
         </div>
 
         <!-- Define a new 'actions' div to contain statistics, order, and share buttons-->
-        <div class="span5 actions">
+        <div class="span6 actions">
             <div class="row-fluid">
                 <div class="span8 offset2">
                     <div class="row-fluid statistics">
