--- a/public/demo_inprogress.html
+++ b/public/demo_inprogress.html
@@ -42,7 +42,7 @@
         <!-- Now add the content -->
             <div class="container-fluid">
             <div class="row-fluid">
-                <h1 align="center">Coming soon!</h1>
+                <h1 class="heading">Coming soon!</h1>
             </div><!--/row-fluid-->
             <div class="push"></div>
             </div><!--/.fluid-container-->
