Hot fix: changed video size to match smaller screens

--- a/public/index.html
+++ b/public/index.html
@@ -77,14 +77,15 @@
         </div>
       </div>
       <div class="row-fluid pitch"> 
-        <div class="span6 video"> 
-            <video src="/public/img/Intro.m4v" controls height="254" width="449" poster="/public/img/Intro.png">
-                Sorry, your browser doesn't support the video tag, 
-                but you can <a href="/public/img/Intro.m4v">download it</a>
-                and watch it with your favorite video player!
-            </video>
+        <div class="span6 video">
+            <div class="row-fluid">
+                <video src="/public/img/Intro.m4v" controls height="226"     width="400" poster="/public/img/Intro.png">
+                    Sorry, your browser doesn't support the video tag, 
+                    but you can <a href="/public/img/Intro.m4v">download it</a>
+                    and watch it with your favorite video player!
+                </video>
+            </div>
         </div>
-
         <!-- Define a new 'actions' div to contain statistics, order, and share buttons-->
         <div class="span6 actions">
             <div class="row-fluid">
