Added new video & removed the order page since it wont be used for the demo

--- a/public/about.html
+++ b/public/about.html
@@ -35,7 +35,9 @@
               <li><a href="/public/index.html">Home</a>
               </li>
               <li class="active"><a href="#">About us</a></li>
+              <!--Remove the orderrs for now
               <li><a href="/orders">Orders</a></li>
+              -->
               <li><a href="/public/demo.html">Demo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
