--- a/public/demo_inprogress.html
+++ b/public/demo_inprogress.html
@@ -32,7 +32,9 @@
                     <ul class="nav">
                         <li><a href="/public/index.html">Home</a></li>
                         <li><a href="/public/about.html">About us</a></li>
+                        <!--Remove orders entry for now
                         <li><a href="/orders">Orders</a></li>
+                        -->
                         <li class="active"><a href="#">Demo</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -41,9 +43,25 @@
         </div>
         <!-- Now add the content -->
             <div class="container-fluid">
-            <div class="row-fluid">
-                <h1 align="center">Coming soon!</h1>
-            </div><!--/row-fluid-->
+                 <div class="row-fluid pitch"> 
+                    <div class="span6 video"> 
+                        <video src="/public/img/Usage.m4v" autoplay controls loop height="254" width="449" poster="/public/img/Start.jpg">
+                        Sorry, your browser doesn't support the video tag, but you can <a href="/public/img/Intro.m4v">download it</a>
+                        and watch it with your favorite video player!
+                        </video>
+                    </div>
+        
+                <div class="row-fluid section1">
+                    <div class="span6 section1">
+                        <p>
+                            This video shows how a person is able to incorporate media files along with the original document (pdf in this case) into a personalized <i>mutable document</i>. This <i>mutable document</i> is dynamic in nature and will change if any of the files attached to it are modified. However, the user can generate a <i>static</i> version of it (epub in this video).   
+                        </p>
+                        <p>
+                            This <i>mutable document</i> can be further modified by the user or it can be shared with the user's peers or even with the content creator of the original document.
+                        </p>
+                    </div>
+                </div>
+        
             <div class="push"></div>
             </div><!--/.fluid-container-->
         </div> <!-- wrapper -->
