--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,9 @@
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="/public/about.html">About us</a></li>
+              <!--Remove the orders for now
               <li><a href="/orders">Orders</a></li>
+              -->
               <li><a href="/public/demo.html">Demo</a></li>
             </ul>
           </div><!--/.nav-collapse -->
